Added Pad See Ew recipe
Added detailed recipe for Pad See Ew and added navigation links to home page.

--- a/recipes/pad-see-ew.html
+++ b/recipes/pad-see-ew.html
@@ -6,6 +6,51 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="../index.html">Return Home</a>
     <h1>Pad See Ew</h1>
+
+    <img src="../images/pad_see_ew.webp" alt="Picture of a completed pad see ew dish" height="500" width="310">
+
+    <h3>Ingredients</h3>
+    <h4>Noodles</h4>
+        <ul>
+            <li>7oz dried wide rice noodle sticks</li>
+        </ul>
+    <h4>Sauce</h4>
+        <ul>
+            <li>2 tbsp soy sauce</li>
+            <li>1.5 tbsp oyster sauce</li>
+            <li>2 tsp white vinegar</li>
+            <li>2 tsp sugar</li>
+        </ul>
+    <h4>Stir Fry</h4>
+        <ul>
+            <li>3 tbsp peanut/vegetable oil</li>
+            <li>2 cloves garlic minced</li>
+            <li>8oz ribeye steak</li>
+            <li>1 tbsp corn starch</li>
+            <li>1 tsp baking soda</li>
+            <li>2 eggs</li>
+            <li>5 steams chinese broccoli</li>
+        </ul>
+    <h3>Instructions</h3>
+    <h4>Prep</h4>
+        <ol>
+            <li><strong>Chinese Broccoli:</strong> Trim stems, seperate leaves, cut into 3" pieces.</li>
+            <li><strong>Steak: </strong>Cut into 1/4" strips and add to bowl. Marinate with 1 tbsp corn starch, 1 tsp baking soda, and 2 tbsp soy sauce.</li>
+            <li><strong>Noodles:</strong> Prepare according to package directions and drain.</li>
+            <li><strong>Sauce:</strong> Mix all ingredients until sugar is dissolved.</li>
+        </ol>
+    <h4>Cook</h4>
+        <ol>
+            <li><strong>Heat oil: </strong>
+            Add peanut/veggie oil to a large skillet and heat over medium-high heat until shimmering.</li>
+            <li><strong>Cook steak: </strong>Cook marinated steaks in a single layer until just cooked through. Remove from skillet.</li>
+            <li><strong>Cook broccoli stems: </strong>Cook broccoli stems in a single layer until they develop a nice char, then start to sautee vigorously.</li>
+            <li><strong>Add garlic, noodles, and sauce: </strong>Add garlic and stir until fragrant (don't burn it!). Add the noodles and sauce to the skillet and sautee vigorously.</li>
+            <li><strong>Scramble egg: </strong>When the sauce has thickened up, push everything to one side and add eggs to the open side of the skillet and scramble. Once scrambled, fold them into the rest of the ingredients.</li>
+            <li><strong>Add steak and broccoli leaves: </strong> Add back steak and accumulated juices and add broccoli leaves. Cook until leaves are just wilted, and kill the heat.</li>
+            <li><strong>Toppings (optional): </strong>Top with a generous amount of sesame oil and sliced scallions</li>
+        </ol>
 </body>
 </html>
