--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/pad-see-ew.html">Pad See Ew</a>
+
+    <ul>
+        <li><a href="./recipes/pad-see-ew.html">Pad See Ew</a></li>
+        <li><a href="./recipes/pad-thai.html">Pad Thai</a></li>
+        <li><a href="./recipes/drunken-noodles.html">Drunken Noodles</a></li>
+    </ul>
 </body>
 </html>
